<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PairBear</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="numPeople">人数 ：</string>
    <string name="people">人</string>
    <string name="money">金額 ：</string>
    <string name="yen">円</string>
    <string name="calc">計算</string>
    <string name="oneMoney">Price of girl</string>
    <string name="kareMoney">Price of boy</string>
    <string name="result">xxxxx</string>
    <string name="kakutei">OK</string>
    <string name="rankmidasi">Dutch treat calculation</string>
    <string name="omisesagasi">Shop</string>
    <string name="omisesagasi_bottun">Shop</string>
    <string name="pick">Gallery</string>
    <string name="loading">Loading</string>
    <string name="repick">Gallery</string>
    <string name="demo">Picture judgment</string>
    <string name="demo_face_detection">Smile detection</string>
    <string name="demo_scene_understanding">Scene understanding</string>

</resources>
