<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lemonchiffon"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_pick_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design_s"
        android:drawableLeft="@drawable/search"
        android:onClick="onPickImage"
        android:text="@string/pick"
        android:textStyle="bold"
        android:typeface="serif" />

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

    <Button
        android:id="@+id/button_face_detection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design_egao"
        android:drawableLeft="@drawable/smileicon"
        android:onClick="onFaceDetection"
        android:text="@string/demo_face_detection"
        android:textStyle="bold"
        android:typeface="serif"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

    <Button
        android:id="@+id/button_scene_understanding"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design_s"
        android:onClick="onSceneUnderstanding"
        android:text="@string/demo_scene_understanding"
        android:textStyle="bold"
        android:typeface="serif"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/liner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

    <Button
        android:id="@+id/rekokakuteibutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design_kakutei"
        android:onClick="syasinback"
        android:text="Back"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/kumacouple" />

</LinearLayout>